--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travelling_schedule = "
+    "travelling_schedule = 'I will be travell'"
    ]
   },
   {
