automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travelling_schedule = 'I will be travelling {}'"
+    "travelling_schedule = 'I will be travelling {} weeks starting in the month of '"
    ]
   },
   {
