automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,11 +164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travelling_schedule = 'I will be travelling {} weeks starting in the month of {}.'.format(number_of_weeks, )"
+    "travelling_schedule = 'I will be travelling {} weeks starting in the month of {}.'.format(number_of_weeks, travel_month)\n",
+    "travelling_"
    ]
   },
   {
