--- a/index.ipynb
+++ b/index.ipynb
@@ -164,12 +164,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I will be travelling 5 weeks starting in the month of January.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travelling_schedule = 'I will be travelling {} weeks starting in the month of {}.'.format(number_of_weeks, travel_month)\n",
-    "travelling_"
+    "travelling_schedule"
    ]
   },
   {
